added text in hero section

--- a/home.html
+++ b/home.html
@@ -38,18 +38,17 @@
             <div class="home-content">
                 <h3>Hi, ich bin</h3>
                 <h1>R3nateGr4nate</h1>
-                <h3>auf dem Weg zur <span class="multiple-text"></span></h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ut veniam fugit 
-                    totam placeat necessitatibus harum tempore eius. 
-                    Laudantium cupiditate harum aperiam pariatur fuga voluptates minus vel architecto 
-                    itaque minima.</p>
+                <h3>eine  <span class="multiple-text"></span></h3>
+                <p>Feuriges Gameplay gepaart mit schwäbischer Gosch. Ich streame hauptsächlich EA Sports FC 26 ehemals Fifa. 
+                    Ansonsten wird gespielt worauf ich Lust habe, Battlefield, CoD, Minecraft, oder ähnliches auf meinem Kanal. 
+                    Ich bin eine Gamerin mittleren Alters, um genau zu sein, zarte 46. Aber für's Gaming ist man nie zu alt.</p>
             <div class="social-media">
                 <a href="#"><i class='bx bxl-twitter'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
                 <a href="#"><i class='bx bxl-youtube' ></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a> 
+            <!-- <a href="#" class="btn">Download CV</a>  -->
         </div>
 
         <div class="home-img">
