--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
         <!-- header design  -->
         <header class="header">
-            <a href="#" class="logo">Portfolio</a>
+            <a href="#" class="logo"></a>
 
             <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -39,9 +39,7 @@
                 <h3>Hi, ich bin</h3>
                 <h1>R3nateGr4nate</h1>
                 <h3>eine  <span class="multiple-text"></span></h3>
-                <p>Feuriges Gameplay gepaart mit schwäbischer Gosch. Ich streame hauptsächlich EA Sports FC 26 ehemals Fifa. 
-                    Ansonsten wird gespielt worauf ich Lust habe, Battlefield, CoD, Minecraft, oder ähnliches auf meinem Kanal. 
-                    Ich bin eine Gamerin mittleren Alters, um genau zu sein, zarte 46. Aber für's Gaming ist man nie zu alt.</p>
+                <p></p>
             <div class="social-media">
                 <a href="#"><i class='bx bxl-twitter'></i></a>
                 <a href="#"><i class='bx bxl-instagram'></i></a>
@@ -64,12 +62,10 @@
 
             <div class="about-content">
                 <h2 class="heading">Über <span>Mich</span></h2>
-                <h3>Frontend Entwicklerin!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, quis voluptate. 
-                    Fugiat odio nihil mollitia cum expedita sit neque veniam assumenda! Harum quo corrupti, 
-                    dolore culpa omnis consectetur fuga numquam veritatis minima aspernatur! Laboriosam aspernatur 
-                    fugit facilis doloremque architecto nihil, quidem voluptatum tempora, maiores, 
-                    praesentium suscipit!</p>
+                <h3></h3>
+                <p>Feuriges Gameplay gepaart mit schwäbischer Gosch. Ich streame hauptsächlich EA Sports FC 26 ehemals Fifa. 
+                    Ansonsten wird gespielt worauf ich Lust habe, Battlefield, CoD, Minecraft, oder ähnliches auf meinem Kanal. 
+                    Ich bin eine Gamerin mittleren Alters, um genau zu sein, zarte 46. Aber für's Gaming ist man nie zu alt.</p>
                 <a href="#" class="btn">Mehr lesen </a>
             </div>
 
