--- a/home.html
+++ b/home.html
@@ -33,6 +33,11 @@
             </nav>
         </header>
 
+        <!-- scroll up button -->
+        <div class="scroll-up-btn" id="scrollUpBtn">
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+
         <!-- home section design -->
         <section class="home" id="home">
             <div class="home-content">
@@ -197,11 +202,8 @@
           <!-- footer design -->
            <footer class="footer">
                 <div class="footer-text">
-                    <p>Copyright &copy; 2025 by R3nateGr4nate | All Rights Reserved.</p>
-                </div>
-
-                <div class="footer-iconTop">
-                    <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+                    <p>Copyright &copy; 2025 with ❤️ Irina Gorges</p>
+                    <p>All Rights Reserved.</p>
                 </div>
         </footer>
 
